# gencs

./: CMakeLists.txt  README.md  package.xml  setup.py
cmake/: gencs-extras.cmake.em
scripts/: CMakeLists.txt  gen_cs.py  msg.cs.template  srv.cs.template
src/gencs/: __init__.py
