<?xml version="1.0"?>
<package>
  <name>gencs</name>
  <version>0.1.0</version>
  <description>C# ROS message and service generators.</description>
  <maintainer email="tamas.bates@tum.de">tamas</maintainer>
  <license>AGPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>genmsg</buildtool_depend>
  <build_depend>genmsg</build_depend>
  <run_depend>genmsg</run_depend>

  <export>
    <message_generator>cs</message_generator>
    <architecture_independent/>
  </export>
</package>
